--- a/contracts/factory/Cargo.toml
+++ b/contracts/factory/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Oroswap"]
 edition = "2021"
 description = "Oroswap factory contract - pair contract generator and directory"
 license = "GPL-3.0-only"
-repository = "https://gitlab.com/zig-dex/oro-contracts"
+repository = "https://github.com/oroswap/oroswap-core"
 homepage = "https://www.oroswap.org"
 
 exclude = [
