--- a/contracts/periphery/tokenfactory_tracker/Cargo.toml
+++ b/contracts/periphery/tokenfactory_tracker/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Oroswap"]
 edition = "2021"
 description = "Cosmos Bank hook for tokenfactory tokens"
 license = "GPL-3.0-only"
-repository = "https://gitlab.com/zig-dex/oro-contracts"
+repository = "https://github.com/oroswap/oroswap-core"
 homepage = "https://www.oroswap.org"
 
 [features]
