--- a/contracts/tokenomics/vesting/Cargo.toml
+++ b/contracts/tokenomics/vesting/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Oroswap"]
 edition = "2021"
 description = "Oroswap Vesting Contract holds tokens and releases them to the beneficiary over time."
 license = "GPL-3.0-only"
-repository = "https://gitlab.com/zig-dex/oro-contracts"
+repository = "https://github.com/oroswap/oroswap-core"
 homepage = "https://www.oroswap.org"
 
 [lib]
