--- a/packages/oroswap-core/Cargo.toml
+++ b/packages/oroswap-core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Oroswap"]
 edition = "2021"
 description = "Common Oroswap types, queriers and other utils"
 license = "Apache-2.0"
-repository = "https://gitlab.com/zig-dex/oro-contracts"
+repository = "https://github.com/oroswap/oroswap-core"
 homepage = "https://www.oroswap.org"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
