toolchain and flags config, test file patch

--- a/packages/oroswap_test/Cargo.toml
+++ b/packages/oroswap_test/Cargo.toml
@@ -12,23 +12,21 @@ homepage = "https://www.oroswap.org"
 default = []
 injective = []
 sei = []
-cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1", "cw-multi-test/cosmwasm_1_1"]
-cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2", "cw-multi-test/cosmwasm_1_2"]
-cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3", "cw-multi-test/cosmwasm_1_3"]
-cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4", "cw-multi-test/cosmwasm_1_4"]
+library = []
+cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
+cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
+cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
+cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 oroswap = { workspace = true }
-oroswap-factory = { path = "../../contracts/factory" }
 cosmwasm-schema = "1.2.5"
 cosmwasm-std = "1.2.5"
-cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = ["cosmwasm_1_1"] }
 serde = "1.0"
 schemars = "0.8.1"
 anyhow = "1.0"
-cw20-base = "1.1"
 itertools = { workspace = true }
 cw-utils = { workspace = true }
 cw-storage-plus = { workspace = true }
@@ -36,3 +34,9 @@ osmosis-std = "0.21.0"
 neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "main" }
 prost = "0.12"
 sha2 = "0.10.8"
+
+# Test-only dependencies - only available when not building for wasm32
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+oroswap-factory = { path = "../../contracts/factory" }
+cw-multi-test = { git = "https://github.com/astroport-fi/cw-multi-test", branch = "feat/bank_with_send_hooks_1_0", features = ["cosmwasm_1_1"] }
+cw20-base = "1.1"
