--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,12 +10,6 @@ on:
 
 permissions:
   contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -32,7 +26,6 @@ jobs:
       - name: Install dependencies
         run: |
           npm install -g markdownlint-cli
-          npm install -g @github-docs/frontmatter
 
       - name: Lint markdown
         run: |
@@ -52,13 +45,17 @@ jobs:
           
           markdownlint docs/**/*.md --ignore node_modules
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
       - name: Build documentation site
         run: |
-          # Create index.html from docs/README.md
-          echo '<!DOCTYPE html>
+          # Create a simple documentation index
+          mkdir -p _site
+          
+          # Copy all markdown files
+          cp -r docs/* _site/
+          
+          # Create a simple index.html
+          cat > _site/index.html << 'EOF'
+          <!DOCTYPE html>
           <html>
           <head>
             <meta charset="utf-8">
@@ -86,13 +83,13 @@ jobs:
               <div class="nav">
                 <h3>Documentation</h3>
                 <ul>
-                  <li><a href="contracts/factory.html">Factory Contract</a></li>
-                  <li><a href="contracts/pairs.html">Pair Contracts</a></li>
-                  <li><a href="contracts/router.html">Router Contract</a></li>
-                  <li><a href="contracts/incentives.html">Incentives Contract</a></li>
-                  <li><a href="events/factory-events.html">Factory Events</a></li>
-                  <li><a href="transactions/swap-examples.html">Swap Examples</a></li>
-                  <li><a href="deployment/testnet.html">Testnet Deployment</a></li>
+                  <li><a href="contracts/factory.md">Factory Contract</a></li>
+                  <li><a href="contracts/pairs.md">Pair Contracts</a></li>
+                  <li><a href="contracts/router.md">Router Contract</a></li>
+                  <li><a href="contracts/incentives.md">Incentives Contract</a></li>
+                  <li><a href="events/factory-events.md">Factory Events</a></li>
+                  <li><a href="transactions/swap-examples.md">Swap Examples</a></li>
+                  <li><a href="deployment/testnet.md">Testnet Deployment</a></li>
                 </ul>
               </div>
               <div class="content">
@@ -101,9 +98,9 @@ jobs:
                 
                 <h2>Quick Start</h2>
                 <ol>
-                  <li><a href="deployment/testnet.html">Deploy Contracts</a></li>
-                  <li><a href="contracts/factory.html">Create Pairs</a></li>
-                  <li><a href="transactions/swap-examples.html">Start Trading</a></li>
+                  <li><a href="deployment/testnet.md">Deploy Contracts</a></li>
+                  <li><a href="contracts/factory.md">Create Pairs</a></li>
+                  <li><a href="transactions/swap-examples.md">Start Trading</a></li>
                 </ol>
 
                 <h2>Contract Addresses (Testnet v1.0.0)</h2>
@@ -122,77 +119,39 @@ jobs:
               </div>
             </div>
           </body>
-          </html>' > _site/index.html
+          </html>
+          EOF
 
-          # Copy all markdown files to _site
-          mkdir -p _site
-          cp -r docs/* _site/
-          
-          # Convert markdown to HTML (simple conversion)
-          find _site -name "*.md" -exec sh -c '
-            for file do
-              html_file="${file%.md}.html"
-              echo "<!DOCTYPE html>
-              <html>
-              <head>
-                <meta charset=\"utf-8\">
-                <title>Oroswap Documentation</title>
-                <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">
-                <style>
-                  body { font-family: -apple-system, BlinkMacSystemFont, \"Segoe UI\", Helvetica, Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; }
-                  .container { max-width: 1200px; margin: 0 auto; }
-                  h1 { color: #0366d6; border-bottom: 1px solid #eaecef; padding-bottom: 10px; }
-                  h2 { color: #24292e; margin-top: 30px; }
-                  h3 { color: #24292e; }
-                  a { color: #0366d6; text-decoration: none; }
-                  a:hover { text-decoration: underline; }
-                  code { background-color: #f6f8fa; padding: 2px 4px; border-radius: 3px; font-family: \"SFMono-Regular\", Consolas, \"Liberation Mono\", Menlo, monospace; }
-                  pre { background-color: #f6f8fa; padding: 15px; border-radius: 6px; overflow-x: auto; }
-                  pre code { background-color: transparent; padding: 0; }
-                  .nav { background-color: #f6f8fa; padding: 15px; border-radius: 6px; margin-bottom: 20px; }
-                  .nav ul { list-style: none; padding: 0; margin: 0; }
-                  .nav li { margin: 5px 0; }
-                  .content { background-color: white; padding: 20px; border-radius: 6px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); }
-                </style>
-              </head>
-              <body>
-                <div class=\"container\">
-                  <div class=\"nav\">
-                    <h3>Documentation</h3>
-                    <ul>
-                      <li><a href=\"../index.html\">Home</a></li>
-                      <li><a href=\"../contracts/factory.html\">Factory Contract</a></li>
-                      <li><a href=\"../contracts/pairs.html\">Pair Contracts</a></li>
-                      <li><a href=\"../contracts/router.html\">Router Contract</a></li>
-                      <li><a href=\"../contracts/incentives.html\">Incentives Contract</a></li>
-                      <li><a href=\"../events/factory-events.html\">Factory Events</a></li>
-                      <li><a href=\"../transactions/swap-examples.html\">Swap Examples</a></li>
-                      <li><a href=\"../deployment/testnet.html\">Testnet Deployment</a></li>
-                    </ul>
-                  </div>
-                  <div class=\"content\">
-                    $(pandoc -f markdown -t html "$file")
-                  </div>
-                </div>
-              </body>
-              </html>" > "$html_file"
-              rm "$file"
-            done
-          ' sh {} +
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Upload documentation artifact
+        uses: actions/upload-artifact@v4
         with:
-          path: '_site'
+          name: documentation
+          path: _site/
+          retention-days: 30
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4 
+      - name: Comment on PR
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `## 📚 Documentation Build Complete
+            
+            Documentation has been built successfully! 
+            
+            **To enable GitHub Pages:**
+            1. Go to Settings > Pages
+            2. Select "GitHub Actions" as source
+            3. The documentation will be deployed automatically on merge to main
+            
+            **Files included:**
+            - Contract documentation (Factory, Router, Pairs, Incentives)
+            - Deployment guides (Testnet)
+            - Transaction examples (Swap examples)
+            - Event documentation (Factory events)
+            
+            Documentation artifact is available for download.`
+            }) 
