--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,6 +33,7 @@ jobs:
           echo '{
             "MD013": false,
             "MD022": false,
+            "MD025": false,
             "MD031": false,
             "MD032": false,
             "MD040": false,
