chore: reorganize scripts and update build system
- Move test/dev scripts to test-scripts/ directory
- Update build scripts to use cosmwasm/optimizer:0.17.0
- Remove obsolete Dockerfiles and build scripts
- Add build_cw20.sh and simplify build_release.sh

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ ARCHITECTURE.md
 
 # Development contracts (not ready for staging)
 # contracts/periphery/pool_initializer/
+
+# Test and development scripts
+/test-scripts/
