feat: version bump to 1.1.0 for mainnet release
- Update all contract versions to 1.1.0
- Enable zigchain feature by default for pair contracts
- Fix test cases for token factory field mismatches

--- a/contracts/pair/Cargo.toml
+++ b/contracts/pair/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oroswap-pair"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Oroswap"]
 edition = "2021"
 description = "The Oroswap constant product pool contract implementation"
@@ -22,6 +22,7 @@ exclude = [
 crate-type = ["cdylib", "rlib"]
 
 [features]
+default = ["zigchain"]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
