--- a/contracts/pair_concentrated/Cargo.toml
+++ b/contracts/pair_concentrated/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oroswap-pair-concentrated"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Oroswap"]
 edition = "2021"
 description = "The Oroswap concentrated liquidity pair"
@@ -22,6 +22,7 @@ exclude = [
 crate-type = ["cdylib", "rlib"]
 
 [features]
+default = ["zigchain"]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
@@ -32,8 +33,8 @@ zigchain = ["oroswap/zigchain", "oroswap_pcl_common/zigchain"]
 
 [dependencies]
 oroswap.workspace = true
-oroswap-circular-buffer = { path = "../../packages/circular_buffer", version = "1.0.0" }
-oroswap_pcl_common = { path = "../../packages/oroswap_pcl_common", version = "1.0.0" }
+oroswap-circular-buffer = { path = "../../packages/circular_buffer", version = "1.1.0" }
+oroswap_pcl_common = { path = "../../packages/oroswap_pcl_common", version = "1.1.0" }
 cw2.workspace = true
 cw20 = "1.1"
 cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"] }
