--- a/packages/circular_buffer/Cargo.toml
+++ b/packages/circular_buffer/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "oroswap-circular-buffer"
-version = "1.0.0"
-authors = ["Timofei Epanchintsev <5527315+epanchee@users.noreply.github.com>", "Oroswap"]
+version = "1.1.0"
+authors = ["Timofei Epanchintsev <5527315+epanchee@users.noreply.github.com>", "Astroport"]
 edition = "2021"
 description = "Circular buffer to store time series data in CosmWasm contracts"
 license = "Apache-2.0"
